--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.45",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.3.3"
   }
 }
