--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
